# Introduction-to-Efficient-Programming-with-C-Cplusplus-and-Rust-SS-2025

./: .gitlab-ci.yml
exercise0/: .gitignore  CMakeLists.txt  README.md
exercise0/bench/: CMakeLists.txt  buggy_bench.cc  fast_bench.cc  slow_bench.cc
exercise0/include/: effi_putchar.h  print.h
exercise0/src/: main.c  print.c
exercise0/tests/: CMakeLists.txt  buggy_bench_test.cc  fast_bench_test.cc  print_buggy.cc  print_hello_world.cc  print_leaky.cc  print_very_slowly.cc  slow_bench_test.cc
exercise1/: CMakeLists.txt  README.md
exercise1/bench/: CMakeLists.txt  fixed_bench.cc  flexible_bench.cc  paged_bench.cc  preparation_bench.cc
exercise1/include/: balloc.h
exercise1/src/: balloc.c  main.c
exercise1/tests/: CMakeLists.txt  extended_test.cc  get_from_bitmap_test.cc  os_allocator_test.cc  return_to_bitmap_test.cc  user_api_test.cc
exercise2/: CMakeLists.txt  README.md
exercise2/bench/: CMakeLists.txt  jayson_bench_helper.hpp  parse_bench.cc  tokenize_bench.cc
exercise2/include/: jayson.hpp  jayson_comparators.hpp  jayson_dump.hpp  jayson_fixed.hpp  jayson_helpers.hpp  jayson_print.hpp
exercise2/src/: jayson.cc  main.cc
exercise2/tests/: CMakeLists.txt  jayson_testhelper.hpp  parse_complete_documents_test.cc  parse_complex_structures_test.cc  parse_error_test.cc  parse_simple_structures_test.cc  parse_single_value.cc  red-dress.jayson  tokenize_bench_test.cc  tokenize_test.cc
exercise3/: .gitignore  CMakeLists.txt  README.md
exercise3/bench/: CMakeLists.txt  bench_setup.cc  bench_setup.h  cutout_bench.cc  rasterize_bench.cc  shader_bench.cc
exercise3/include/: bmp.h  buffer.h  color.h  geom.h  grid.h  kit_fan.h  rusterizer.h  shader.h  sticker.h
exercise3/src/: main.cpp
exercise3/tests/: CMakeLists.txt  convex_polygon_test.cpp  grid_test.cpp  material_point_shader_test.cpp  point_in_polygon_test.cpp  rusterizer_test.cpp  test_helper.h
